--- a/server/templates/developer.html
+++ b/server/templates/developer.html
@@ -44,7 +44,7 @@ Step 2: Call confer APIs with your app token to get user's private data:
 
 # Step 2: You can get your app_token at http://confer.csail.mit.edu/developer/apps at any time
 
-# Step 3: Redirect your first-time users to http://confer.csail.mit.edu/developer/allow_access?app_id=<your app id> 
+# Step 3: Redirect your first-time users to http://confer.csail.mit.edu/developer/allow_access?app_id=&lt;your app id&gt;
 #         so that they can allow your app to access their data.
 
 
@@ -96,7 +96,7 @@ print http_post(host, '/api/similar_people', {
 /**
  * Step 1: Create your app at http://confer.csail.mit.edu/developer/apps (click on the button 'Create a New App')
  * Step 2: You can get your app_token at http://confer.csail.mit.edu/developer/apps at any time
- * Step 3: Redirect your first-time users to http://confer.csail.mit.edu/developer/allow_access?app_id=<your app id> 
+ * Step 3: Redirect your first-time users to http://confer.csail.mit.edu/developer/allow_access?app_id=&lt;your app id&gt; 
  *         so that they can allow your app to access their data.
  */
 $params = array(
