--- a/server/templates/developer.html
+++ b/server/templates/developer.html
@@ -9,15 +9,15 @@
 {% endblock %}
 {% block content %}
 <div class="blurb">
-Use the Confer APIs for querying user's preferences, recommendations and network. Leverage confer data for building conference tools.
+Use Confer APIs for querying user's preferences, recommendations and network. Leverage confer data for building conference tools.
 </div>
 <!-- Credits -->
 <div>
 <h3>Public Data</h3>
 <p style="padding-top:1em;">
-For any conference you can get all the public data here -- <a href="#">http://confer.csail.mit.edu/static/conf/&lt;conf-name&gt;/data/</a>
+For any conference you can get all the public data at -- <a class="blue" href="#">http://confer.csail.mit.edu/static/conf/&lt;conf-name&gt;/data/</a>
 <br />
-For eg:
+For example:
 <ul>
 <li>
 CSCW 2014 Data: <a class="blue" href="http://confer.csail.mit.edu/static/conf/cscw2014/data/">http://confer.csail.mit.edu/static/conf/cscw2014/data/</a> </li>
