--- a/server/templates/developer.html
+++ b/server/templates/developer.html
@@ -38,7 +38,7 @@ Step 1: Create a confer app at <a class="blue" href="http://confer.csail.mit.edu
 Step 2: Get your app_token at <a class="blue" href="http://confer.csail.mit.edu/developer/apps">http://confer.csail.mit.edu/developer/apps</a>
 </li>
 <li>
-Step 3: Redirect your first-time users to http://confer.csail.mit.edu/developer/allow_access?app_id=&lt;your app id&gt; so that they can authorize your app to access their data.
+Step 3: Redirect your first-time users to <a class="blue" href="#">http://confer.csail.mit.edu/developer/allow_access?app_id=&lt;your app id&gt;</a> so that they can authorize your app to access their data.
 </li>
 <li>
 Step 4: Call confer APIs with your app token to get user's private data:</li>
