--- a/server/templates/credits.html
+++ b/server/templates/credits.html
@@ -25,8 +25,8 @@ Confer makes use of many open source libraries and tools. We can barely express 
 <br />
  <h3>Programming Languages</h3>
  <ul style="padding-top:1em;">
-	<li>1. Java -- <a class="blue" href="http://httpd.apache.org/">http://httpd.apache.org</a></li>
-	<li>2. Python -- <a class="blue" href="http://lucene.apache.org/">http://lucene.apache.org</a></li>
+	<li>1. Java -- <a class="blue" href="http://openjdk.java.net/">http://openjdk.java.net/</a></li>
+	<li>2. Python -- <a class="blue" href="http://www.python.org/">http://www.python.org/</a></li>
 	<li>3. Scala -- <a class="blue" href="http://www.scala-lang.org/">http://www.scala-lang.org</a></li>
  </ul>
 </div>  <!-- confer team -->
