--- a/server/templates/credits.html
+++ b/server/templates/credits.html
@@ -19,14 +19,14 @@ Confer makes use of many open source libraries and tools. We can barely express 
 <li>2. Apache Lucene -- <a class="blue" href="http://lucene.apache.org/">http://lucene.apache.org</a></li>
 <li>3. The Lenskit Recommender Framework -- <a class="blue" href="http://lenskit.grouplens.org/">http://lenskit.grouplens.org</a></li>
 <li>4. PostgreSql -- <a class="blue" href="http://www.postgresql.org/">http://www.postgresql.org</a></li>
-<li>5. Django -- <a class="blue" href="https://www.djangoproject.com/">https://www.djangoproject.com/</a></li>
+<li>5. Django -- <a class="blue" href="https://www.djangoproject.com/">https://www.djangoproject.com</a></li>
 </ul>
 <br />
 <br />
  <h3>Programming Languages</h3>
  <ul style="padding-top:1em;">
-	<li>1. Java -- <a class="blue" href="http://openjdk.java.net/">http://openjdk.java.net/</a></li>
-	<li>2. Python -- <a class="blue" href="http://www.python.org/">http://www.python.org/</a></li>
+	<li>1. Java -- <a class="blue" href="http://openjdk.java.net/">http://openjdk.java.net</a></li>
+	<li>2. Python -- <a class="blue" href="http://www.python.org/">http://www.python.org</a></li>
 	<li>3. Scala -- <a class="blue" href="http://www.scala-lang.org/">http://www.scala-lang.org</a></li>
  </ul>
 </div>  <!-- confer team -->
