--- a/server/templates/developer.html
+++ b/server/templates/developer.html
@@ -102,7 +102,7 @@ print http_post(host, '/api/similar_people', {
 <h4>PHP Example</h4>
 <div style="height:15em; border:1px solid gray; padding:1em; overflow-y:scroll;">
 <pre>
-<?php
+&lt;?php
 /**
  * Step 1: Create your app at http://confer.csail.mit.edu/developer/apps (click on the button 'Create a New App')
  * Step 2: You can get your app_token at http://confer.csail.mit.edu/developer/apps at any time
@@ -139,7 +139,7 @@ var_dump($likes);
 $similar_people = file_get_contents('http://confer.csail.mit.edu/api/similar_people', false, $context);
 var_dump($similar_people);
 
-?>
+?&gt;
 </pre>
 </div>
 </p>
