--- a/server/templates/developer.html
+++ b/server/templates/developer.html
@@ -30,7 +30,7 @@ CHI 2014 Data: <a class="blue" href="http://confer.csail.mit.edu/static/conf/chi
 <br />
 <h3>User's Preference Data</h3>
 <p style="padding-top:1em;">
-You can also get a user's personal data through confer-connect if the user authorizes your app to collect his/her data:
+You can also get a user's personal data through confer-connect if the user authorizes your app to access his/her data:
 <br />
 <br />
 <ul>
