--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -826,7 +826,8 @@ textarea {
 .star-open{
   height: 2.1em;
   width: 2.1em;
-  margin-left: 1em;
+  margin-left: 0em;
+  margin-right: 1em;
   background-image:url(/static/img/star_open.png);
   background-size: 2.1em 2.1em;
   background-repeat:no-repeat;
@@ -836,7 +837,8 @@ textarea {
 .star-filled{
   height: 2.1em;
   width: 2.1em;
-  margin-left: 1em;
+  margin-left: 0em;
+  margin-right: 1em;
   background-image:url(/static/img/star_yellow.png);
   background-size: 2.1em 2.1em;
   background-repeat:no-repeat;
