--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -827,6 +827,7 @@ textarea {
   height: 2.1em;
   width: 2.1em;
   margin-left: 0em;
+  margin-top: 0.5em;
   margin-right: 1em;
   background-image:url(/static/img/star_open.png);
   background-size: 2.1em 2.1em;
@@ -838,6 +839,7 @@ textarea {
   height: 2.1em;
   width: 2.1em;
   margin-left: 0em;
+  margin-top: 0.5em;
   margin-right: 1em;
   background-image:url(/static/img/star_yellow.png);
   background-size: 2.1em 2.1em;
