less padding around star

--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -100,6 +100,11 @@ body {
   .goto-link a{
     /*margin: 0 1em 0 1em;*/
   }
+
+  .metadata{
+    padding: 0.5em;
+    vertical-align: middle !important;
+  }
 }
 
 /*@media (max-width: 480px) {*/
@@ -745,6 +750,7 @@ textarea {
 
 .metadata{
   /*padding: 0 5px 0 5px !important;*/
+  padding: 1.5em;
   vertical-align: middle !important;
 
 }
@@ -825,7 +831,6 @@ textarea {
 .star-open{
   height: 2.1em;
   width: 2.1em;
-  margin-left: 1em;
   background-image:url(/static/img/star_open.png);
   background-size: 2.1em 2.1em;
   background-repeat:no-repeat;
@@ -835,7 +840,6 @@ textarea {
 .star-filled{
   height: 2.1em;
   width: 2.1em;
-  margin-left: 1em;
   background-image:url(/static/img/star_yellow.png);
   background-size: 2.1em 2.1em;
   background-repeat:no-repeat;
