less padding around star

--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -100,11 +100,6 @@ body {
   .goto-link a{
     /*margin: 0 1em 0 1em;*/
   }
-
-  .metadata{
-    padding: 0.5em;
-    vertical-align: middle !important;
-  }
 }
 
 /*@media (max-width: 480px) {*/
@@ -751,6 +746,13 @@ textarea {
 .metadata{
   /*padding: 0 5px 0 5px !important;*/
   padding: 1.5em;
+  vertical-align: middle !important;
+
+}
+
+.no-touch-device .metadata{
+  /*padding: 0 5px 0 5px !important;*/
+  padding: 0.2em;
   vertical-align: middle !important;
 
 }
