less padding around star for mobile

--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -745,18 +745,19 @@ textarea {
 
 .metadata{
   /*padding: 0 5px 0 5px !important;*/
-  padding: 0;
-  padding-left: 0.5em;
+  width: 2.5em;
   vertical-align: middle !important;
 
 }
 
 .no-touch-device .metadata{
   /*padding: 0 5px 0 5px !important;*/
-  padding: 0 1.5em 0 1.5em;
+  width: 4.5em;
   vertical-align: middle !important;
 
 }
+
+
 
 
 .collapsible-subtitle{
@@ -833,7 +834,7 @@ textarea {
 .star-open{
   height: 2.1em;
   width: 2.1em;
-  margin-left: 1em;
+  margin-left: 0.2em;
   background-image:url(/static/img/star_open.png);
   background-size: 2.1em 2.1em;
   background-repeat:no-repeat;
@@ -843,7 +844,7 @@ textarea {
 .star-filled{
   height: 2.1em;
   width: 2.1em;
-  margin-left: 1em;
+  margin-left: 0.2em;
   background-image:url(/static/img/star_yellow.png);
   background-size: 2.1em 2.1em;
   background-repeat:no-repeat;
