--- a/server/static/css/confer.css
+++ b/server/static/css/confer.css
@@ -745,7 +745,7 @@ textarea {
 
 .metadata{
   /*padding: 0 5px 0 5px !important;*/
-  width: 2.5em;
+  width: 2.7em;
   vertical-align: middle !important;
 
 }
@@ -834,7 +834,8 @@ textarea {
 .star-open{
   height: 2.1em;
   width: 2.1em;
-  margin-left: 0.2em;
+  margin: 0 auto;
+  margin-left: 0.5em;
   background-image:url(/static/img/star_open.png);
   background-size: 2.1em 2.1em;
   background-repeat:no-repeat;
@@ -844,7 +845,8 @@ textarea {
 .star-filled{
   height: 2.1em;
   width: 2.1em;
-  margin-left: 0.2em;
+  margin: 0 auto;
+  margin-left: 0.5em;
   background-image:url(/static/img/star_yellow.png);
   background-size: 2.1em 2.1em;
   background-repeat:no-repeat;
