--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -22,11 +22,11 @@ The Meetups feature allows you to discover people with similar interests as your
 
 {% if meetups_enabled %}
 <!-- Favorite List -->
-<h3 class="collapsible-title" id="similar_people_toggle"> People you have favorited</h3>
+<h3 class="collapsible-title collapsible" id="similar_people_toggle"> People you have favorited</h3>
 <div id="similar_people_container">
   <table id="similar_people" class="paper-container">
-    {% if similar_people|length %}
-    {% for p in similar_people %}
+    {% if starred_people|length %}
+    {% for p in starred_people %}
     <tr class="clickable">
       <td class="metadata">  
         <div class="star star-open m_star" data="" onclick="handle_alist(event);">       
@@ -46,7 +46,7 @@ The Meetups feature allows you to discover people with similar interests as your
     {% endfor %}
     {% else %}
     <tr>
-    <td class="error">We tried hard to find people having similar interests as you but we couldn't find any -- this may be because you haven't starred enough papers or there aren't enough other people in the system yet.</span>
+    <td class="error">You haven't favorited anyone yet.</span>
     </td>
     </tr>
     {% endif %}
@@ -56,7 +56,7 @@ The Meetups feature allows you to discover people with similar interests as your
 <br />
 <br />
 <!-- People Favorited -->
-<h3 class="collapsible-title" id="similar_people_toggle"> People who have favorited you</h3>
+<h3 class="collapsible-title collapsible" id="similar_people_toggle"> People who have favorited you</h3>
 <div id="similar_people_container">
   <table id="similar_people" class="paper-container">
     {% if similar_people|length %}
@@ -80,7 +80,7 @@ The Meetups feature allows you to discover people with similar interests as your
     {% endfor %}
     {% else %}
     <tr>
-    <td class="error">We tried hard to find people having similar interests as you but we couldn't find any -- this may be because you haven't starred enough papers or there aren't enough other people in the system yet.</span>
+    <td class="error">No one has favorited you yet.</span>
     </td>
     </tr>
     {% endif %}
@@ -90,7 +90,7 @@ The Meetups feature allows you to discover people with similar interests as your
 <br />
 <br />
 <!-- People Recommended -->
-<h3 class="collapsible-title" id="similar_people_toggle"> People who you may like to meet</h3>
+<h3 class="collapsible-title collapsible" id="similar_people_toggle"> People who you may like to meet</h3>
 <div id="similar_people_container">
   <table id="similar_people" class="paper-container">
     {% if similar_people|length %}
