change say hello

--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -38,7 +38,7 @@ The Meetups feature allows you to discover people with similar interests as your
           <li><h3><a href="mailto:?to={{p.email}}&amp;subject=Hello from {{login_name}}&amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">{{p.name}}</a></h3></li>
           <li><span class="paper-subtype" style="text-align: left !important;">
             You and {{p.name}} have {{p.common_likes}} papers in common. <a class="blue" href="mailto:?to={{p.email}}&amp;subject=Hello from {{login_name}}
-            &amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">Send hello</a> to {{p.name}}!</li>
+            &amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">Say hello</a> to {{p.name}}!</li>
             </span>
         </ul>
       </td>
@@ -72,7 +72,7 @@ The Meetups feature allows you to discover people with similar interests as your
           <li><h3><a href="mailto:?to={{p.email}}&amp;subject=Hello from {{login_name}}&amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">{{p.name}}</a></h3></li>
           <li><span class="paper-subtype" style="text-align: left !important;">
             You and {{p.name}} have {{p.common_likes}} papers in common. <a class="blue" href="mailto:?to={{p.email}}&amp;subject=Hello from {{login_name}}
-            &amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">Send hello</a> to {{p.name}}!</li>
+            &amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">Say hello</a> to {{p.name}}!</li>
             </span>
         </ul>
       </td>
@@ -106,7 +106,7 @@ The Meetups feature allows you to discover people with similar interests as your
           <li><h3><a href="mailto:?to={{p.email}}&amp;subject=Hello from {{login_name}}&amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">{{p.name}}</a></h3></li>
           <li><span class="paper-subtype" style="text-align: left !important;">
             You and {{p.name}} have {{p.common_likes}} papers in common. <a class="blue" href="mailto:?to={{p.email}}&amp;subject=Hello from {{login_name}}
-            &amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">Send hello</a> to {{p.name}}!</li>
+            &amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">Say hello</a> to {{p.name}}!</li>
             </span>
         </ul>
       </td>
