--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -38,7 +38,7 @@ The Meetups feature allows you to discover people with similar interests as your
     {% for p in people_favorited_you %}
     <tr class="clickable">
       <td class="metadata">  
-        <div class="star star-open m_star" data="" onclick="handle_alist(event);">       
+        <div class="star star-open m_star" data="" onclick="handle_person_star(event);">       
         </div>  
       </td>
 
@@ -72,7 +72,7 @@ The Meetups feature allows you to discover people with similar interests as your
     {% for p in similar_people %}
     <tr class="clickable">
       <td class="metadata">  
-        <div class="star star-open m_star" data="" onclick="handle_alist(event);">       
+        <div class="star star-open m_star" data="" onclick="handle_person_star(event);">       
         </div>  
       </td>
 
