--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -33,32 +33,7 @@ The Meetups feature allows you to discover people with similar interests as your
 <!-- People Favorited -->
 <h3 class="collapsible-title collapsible" id="people_favorited_you_toggle" data="people_favorited_you_container"><span class="arrow arrow-down"></span> People who have favorited you</h3>
 <div id="people_favorited_you_container">
-  <table id="people_favorited_you" class="paper-container">
-    {% if people_favorited_you|length %}
-    {% for p in people_favorited_you %}
-    <tr class="clickable">
-      <td class="metadata">  
-        <div class="star star-open m_star" data="" onclick="handle_person_star(event);">       
-        </div>  
-      </td>
-
-      <td class="content">
-        <ul>
-          <li><h3><a href="mailto:?to={{p.email}}&amp;subject=Hello from {{login_name}}&amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">{{p.name}}</a></h3></li>
-          <li><span class="paper-subtype" style="text-align: left !important;">
-            You and {{p.name}} have {{p.common_likes}} papers in common. <a class="blue" href="mailto:?to={{p.email}}&amp;subject=Hello from {{login_name}}
-            &amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">Say hello</a> to {{p.name}}!</li>
-            </span>
-        </ul>
-      </td>
-    </tr>
-    {% endfor %}
-    {% else %}
-    <tr>
-    <td class="content">No one has favorited you yet.
-    </td>
-    </tr>
-    {% endif %}
+  <table id="people_favorited_you" class="paper-container">   
   </table>
 </div>
 
@@ -68,31 +43,6 @@ The Meetups feature allows you to discover people with similar interests as your
 <h3 class="collapsible-title collapsible" id="similar_people_toggle" data="similar_people_container"><span class="arrow arrow-down"></span> People who you may like to meet</h3>
 <div id="similar_people_container">
   <table id="similar_people" class="paper-container">
-    {% if similar_people|length %}
-    {% for p in similar_people %}
-    <tr class="clickable">
-      <td class="metadata">  
-        <div class="star star-open m_star" data="" onclick="handle_person_star(event);">       
-        </div>  
-      </td>
-
-      <td class="content">
-        <ul>
-          <li><h3><a href="mailto:?to={{p.email}}&amp;subject=Hello from {{login_name}}&amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">{{p.name}}</a></h3></li>
-          <li><span class="paper-subtype" style="text-align: left !important;">
-            You and {{p.name}} have {{p.common_likes}} papers in common. <a class="blue" href="mailto:?to={{p.email}}&amp;subject=Hello from {{login_name}}
-            &amp;body=Hi {{p.name}},%0A%0AConfer thinks that we two have similar research interests. Would you be interested in meeting?%0A%0A{{login_name}}" target="_blank">Say hello</a> to {{p.name}}!</li>
-            </span>
-        </ul>
-      </td>
-    </tr>
-    {% endfor %}
-    {% else %}
-    <tr>
-    <td class="content">We tried hard to find people having similar interests as you but we couldn't find any -- this may be because you haven't starred enough papers or there aren't enough other people in the system yet.
-    </td>
-    </tr>
-    {% endif %}
   </table>
 </div>
 
@@ -103,8 +53,11 @@ The Meetups feature allows you to discover people with similar interests as your
 <script type="text/javascript">
 $(document).ready(function(){
   $("#logged_in_name").html(localStorage.getItem('login_name'))
-    bind_events()
-    log('similar_people')     
+  populate_people_you_favorited()
+  populate_people_favorited_you()
+  populate_similar_people()
+  bind_events()
+  log('similar_people')     
 });
 </script>
 <script type="text/javascript" src="/static/javascript/confer.js"></script>
