--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -45,7 +45,10 @@ The Meetups feature allows you to discover people with similar interests as your
   <table id="similar_people" class="paper-container">
   </table>
 </div>
-
+<script type="text/javascript">
+var similar_people = {{similar_people}}
+console.log(similar_people)
+</script>
 {% endif %}
 {% endblock %}
 
