--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -46,7 +46,7 @@ The Meetups feature allows you to discover people with similar interests as your
   </table>
 </div>
 <script type="text/javascript">
-var similar_people = {{similar_people}}
+var similar_people = {{similar_people|safe}}
 console.log(similar_people)
 </script>
 {% endif %}
