--- a/server/templates/meetups.html
+++ b/server/templates/meetups.html
@@ -61,6 +61,7 @@ $(document).ready(function(){
   populate_people_you_favorited()
   populate_people_favorited_you()
   populate_similar_people()
+  highlight_favorite()
   bind_events()
   log('similar_people')     
 });
