Basic framework for error handling

--- a/server/templates/admin.html
+++ b/server/templates/admin.html
@@ -23,18 +23,18 @@
         <br />
     </div>
         <label for="conference_name">Conference Name</label><br />
-        <input type="text" name="conference_name" placeholder="Conference Name"><br /><br />
+        <input type="text" name="conference_name" placeholder="Name of your conference"><br /><br />
 	<label for="conference_title">Conference Title</label><br />
-        <input type="text" name="conference_title" placeholder="Conference Title"><br /><br />
+        <input type="text" name="conference_title" placeholder="Title of your conference"><br /><br />
         <label for="conference_start_date">Conference Start Date</label><br />
-	<input type="text" class="date" name="conference_start_date" placeholder="June 8"><br /><br />
+	<input type="text" class="date" name="conference_start_date" placeholder="2014-06-08"><br /><br />
 	<label for="conference_end_date">Conference End Date</label><br />
-        <input type="text" class="date" name="conference_end_date" placeholder="June 15"><br /><br />
+        <input type="text" class="date" name="conference_end_date" placeholder="2014-06-15"><br /><br />
 	<label for="conference_location">Conference Location</label><br />
 	<input type="text" name="conference_location" placeholder="San Francisco, California"><br /><br />
-	<label for="conference_description">Description in a few sentences</label><br />
-        <textarea type="textarea" style="width:100%; height:200px;" name="conference_description" placeholder="The ACM conference on Designing Interactive Systems is the premier, international arena where designers, artists, psychologists, user experience researchers, systems engineers & many more debate & shape the future of interactive systems design & practice."></textarea>
-	<input class="button" type="submit" value="Create Table"/>
+	<label for="conference_description">Conference Blurb</label><br />
+        <textarea type="textarea" style="width:100%; height:200px;padding-top:12px; padding-left:5px; padding-right:5px; font-size:14px; line-height:20px" name="conference_description" placeholder="Give a description of your conference in a few sentences."></textarea>
+	<input class="button" type="submit" value="Create Conference"/>
         </form>
  <script type="text/javascript">
  $(document).ready(function() {
