--- a/server/templates/team.html
+++ b/server/templates/team.html
@@ -30,6 +30,7 @@
   <div class="blurb">
   Confer originated from myCHI - our first app developed for CHI 2013. The Confer design and many of its features are borrowed from myCHI. Below is the list of people (other than confer team) who contributed to myCHI. 
   </div>
+  <h3 class="collapsible-title"> Other Contributors</h3>
   <table id="confer_team" class="paper-container"> 
     {% for p in past_collaborators %}
     <tr class="clickable">
