--- a/server/templates/admin.html
+++ b/server/templates/admin.html
@@ -1,9 +1,4 @@
-{
-Error: Parse error on line 1:
-{% extends "layout.ht
--^
-Expecting 'STRING', '}'
-% extends "layout.html" %}
+{% extends "layout.html" %}
 {% block links %}
 <span id="logged_in_name">{{login_name}}</span> &nbsp;
 <a class="button mobile-nav" href="#">Menu</a>
