--- a/server/templates/admin.html
+++ b/server/templates/admin.html
@@ -13,7 +13,7 @@
 {% endif %}
 {% endblock %}
 {% block content %}
-<form class="form-container" method="POST" action="/{{conf_name}}/update_conference" enctype='multipart/form-data'>
+<form class="form-container" method="POST" action="/{{conf}}/update_conference" enctype='multipart/form-data'>
 <h3 style="padding-bottom:0.5em;">Update your conference data by uploading JSON files</h3>
 {% csrf_token %}
 <input type="hidden" name="conference_name" value="{{conf_name}}" />
