--- a/server/templates/admin.html
+++ b/server/templates/admin.html
@@ -27,7 +27,10 @@
 <label for="sessions_json" style="line-height:21px;">Sessions File (sessions.json)</label><br />
 <input type="file" style="padding-top:7px;" name="sessions_json" placeholder="upload sessions.json"> <br /><br />
 <label for="schedule_json" style="line-height:21px;">Schedule File (schedule.json)</label><br />
-<input type="file" style="padding-top:7px;" name="schedule_json" placeholder="upload schedule.json"> <br /><br /><br />
+<input type="file" style="padding-top:7px;" name="schedule_json" placeholder="upload schedule.json"> <br /><br />
+<label for="filters_json" style="line-height:21px;">Filters File (filters.json)</label><br />
+<input type="file" style="padding-top:7px;" name="filters_json" placeholder="upload filters.json"> <br /><br />
+<br />
 <input class="button" type="submit" value="Update Conference"/>
 
 </form>
